--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el párrafo de inicio, donde vamos a ver lo que se puede hace con las ramas</p>
+                <p>Este párrafo se agregó en master. JH9</p>
             </div>
         </div>
     </body>
