--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu blog de Master</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el párrafo de inicio, donde vamos a ver lo que se puede hace con las ramas</p>
                 <p>Este párrafo se agregó en master. JH9</p>
+                <p>Suscribite y dale like!!</p>
             </div>
         </div>
     </body>
