--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,9 @@
                 <p>Este párrafo se agregó en master. JH9</p>
                 <p>Suscribite y dale like!!</p>
             </div>
+            <div id="footer">
+                Hecho con amor en Platzi.
+            </div>
         </div>
     </body>
 </html>
