Agregue .gitignore y una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el párrafo de inicio, donde vamos a ver lo que se puede hace con las ramas.</p>
+                <p><img src="imagenes/equipo.jpg" width="100%" /></p>
                 <p>Este párrafo se agregó en master. JH9.</p>
                 <p>Suscribite y dale like!!</p>
             </div>
